--- a/javascript-warm_up/index.html
+++ b/javascript-warm_up/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="0-javascript_is_amazing.js" src="1-add.js"></script>
+    <script src="1-add.js"></script>
 </body>
 </html>
